laborations/lab1/testsuite/good/const.cc
int main(const int y) { const int x; }
