laborations/lab1/testsuite/bad/bad102.cc
int main () {
	1 + double;
}
